Changed APP to Model-View-ViewModel Design
Android Architecture Components implementation
- Added Room
- Added ViewModel
- Added LiveData

- Added repository

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,4 +26,18 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
+
+    // LIFECYCLE
+    def lifecycle_version = "2.0.0"
+    // ViewModel and LiveData
+    implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
+    annotationProcessor "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
+
+    // ROOM
+    def room_version = "2.1.0-alpha04"
+    implementation "androidx.room:room-runtime:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version"
+
+    // Card view
+    implementation 'com.android.support:cardview-v7:28.0.0'
 }
