--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".activities.AddFoodActivity"
+            android:parentActivityName=".activities.MainActivity"
+            android:launchMode="singleTop"></activity>
         <activity
             android:name=".activities.MainActivity"
             android:label="@string/app_name">
