--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,10 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity
-            android:name=".activities.AddFoodActivity"
-            android:launchMode="singleTop"
-            android:parentActivityName=".activities.MainActivity"></activity>
+        <activity android:name=".activities.AddFoodActivity"
+            android:parentActivityName=".activities.MainActivity"
+            android:launchMode="singleTop"></activity>
         <activity
             android:name=".activities.MainActivity"
             android:label="@string/app_name">
@@ -25,7 +24,8 @@
         <activity
             android:name=".activities.FoodActivity"
             android:label="@string/title_activity_food"
-            android:parentActivityName=".activities.MainActivity">
+            android:parentActivityName=".activities.MainActivity"
+            android:theme="@style/AppTheme.NoActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="hochschule.de.bachelorthesis.activities.MainActivity" />
