--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: "androidx.navigation.safeargs"
 
 android {
     compileSdkVersion 28
@@ -20,16 +21,25 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'androidx.appcompat:appcompat:1.1.0-alpha01'
-    implementation 'com.google.android.material:material:1.1.0-alpha02'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
-    implementation 'com.getbase:floatingactionbutton:1.10.1'
+
+    // Material Design
+    implementation 'com.google.android.material:material:1.0.0'
+
+    // Android x
+    implementation 'androidx.appcompat:appcompat:1.1.0-alpha03'
+
+    // Navigation component
+    def nav_version = "2.1.0-alpha01"
+    implementation "androidx.navigation:navigation-fragment:$nav_version" // For Kotlin use navigation-fragment-ktx
+    implementation "androidx.navigation:navigation-ui:$nav_version" // For Kotlin use navigation-ui-ktx
 
     // LIFECYCLE
     def lifecycle_version = "2.0.0"
+
     // ViewModel and LiveData
     implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
     annotationProcessor "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
@@ -39,6 +49,12 @@ dependencies {
     implementation "androidx.room:room-runtime:$room_version"
     annotationProcessor "androidx.room:room-compiler:$room_version"
 
+    // RxJava support for Room
+    implementation "android.arch.persistence.room:rxjava2:1.1.1"
+
+    // Testing support
+    androidTestImplementation "android.arch.core:core-testing:1.1.1"
     // Card view
     implementation 'com.android.support:cardview-v7:28.0.0'
+    implementation 'androidx.annotation:annotation:1.0.2'
 }
