--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,18 +9,22 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activities.AddFoodActivity"
-            android:parentActivityName=".activities.MainActivity"
-            android:launchMode="singleTop"></activity>
+
         <activity
             android:name=".activities.MainActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".activities.AddFoodActivity"
+            android:parentActivityName=".activities.MainActivity"
+            android:launchMode="singleTop">
+        </activity>
+
         <activity
             android:name=".activities.FoodActivity"
             android:label="@string/title_activity_food"
