--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ apply plugin: "androidx.navigation.safeargs"
 
 android {
     compileSdkVersion 28
+
     defaultConfig {
         applicationId "hochschule.de.bachelorthesis"
         minSdkVersion 21
@@ -11,11 +12,16 @@ android {
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+    }
+
+    dataBinding {
+        enabled true
     }
 }
 
