--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:theme="@style/AppTheme">
 
         <activity
-            android:name=".activities.MainActivity"
+            android:name=".ui.activities.MainActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -20,19 +20,19 @@
         </activity>
 
         <activity
-            android:name=".activities.AddFoodActivity"
-            android:parentActivityName=".activities.MainActivity"
+            android:name=".ui.activities.AddFoodActivity"
+            android:parentActivityName=".ui.activities.MainActivity"
             android:launchMode="singleTop">
         </activity>
 
         <activity
-            android:name=".activities.FoodActivity"
+            android:name=".ui.activities.FoodActivity"
             android:label="@string/title_activity_food"
-            android:parentActivityName=".activities.MainActivity"
+            android:parentActivityName=".ui.activities.MainActivity"
             android:theme="@style/AppTheme.NoActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="hochschule.de.bachelorthesis.activities.MainActivity" />
+                android:value=".ui.activities.MainActivity" />
         </activity>
 
         <meta-data
