--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
         </activity>
 
         <activity
-            android:name=".view.activities.FoodActivity"
+            android:name=".view.activities.FoodInfoActivity"
             android:label="@string/title_activity_food"
             android:parentActivityName=".view.activities.MainActivity"
             android:theme="@style/AppTheme.NoActionBar">
