--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,4 +63,5 @@ dependencies {
     // Card view
     implementation 'com.android.support:cardview-v7:28.0.0'
     implementation 'androidx.annotation:annotation:1.0.2'
+    implementation 'androidx.lifecycle:lifecycle-livedata:2.0.0'
 }
