--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="hochschule.de.bachelorthesis">
 
     <application
@@ -8,7 +9,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        tools:ignore="GoogleAppIndexingWarning">
 
         <activity
             android:name=".view.activities.MainActivity"
@@ -21,6 +23,12 @@
 
         <activity
             android:name=".view.activities.AddFoodActivity"
+            android:parentActivityName=".view.activities.MainActivity"
+            android:launchMode="singleTop">
+        </activity>
+
+        <activity
+            android:name=".view.activities.AddMeasurementActivity"
             android:parentActivityName=".view.activities.MainActivity"
             android:launchMode="singleTop">
         </activity>
