--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,15 +33,17 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
 
     // Material Design
-    implementation 'com.google.android.material:material:1.0.0'
+    implementation 'com.google.android.material:material:1.1.0-alpha06'
 
     // Android x
     implementation 'androidx.appcompat:appcompat:1.1.0-alpha05'
 
     // Navigation component
     def nav_version = "2.1.0-alpha03"
-    implementation "androidx.navigation:navigation-fragment:$nav_version" // For Kotlin use navigation-fragment-ktx
-    implementation "androidx.navigation:navigation-ui:$nav_version" // For Kotlin use navigation-ui-ktx
+    implementation "androidx.navigation:navigation-fragment:$nav_version"
+    // For Kotlin use navigation-fragment-ktx
+    implementation "androidx.navigation:navigation-ui:$nav_version"
+    // For Kotlin use navigation-ui-ktx
 
     // LIFECYCLE
     def lifecycle_version = "2.0.0"
