--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,28 +11,23 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-
         <activity
             android:name=".view.activities.MainActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".view.activities.AddFoodActivity"
-            android:parentActivityName=".view.activities.MainActivity"
-            android:launchMode="singleTop">
-        </activity>
-
+            android:launchMode="singleTop"
+            android:parentActivityName=".view.activities.MainActivity"/>
         <activity
             android:name=".view.activities.AddMeasurementActivity"
-            android:parentActivityName=".view.activities.MainActivity"
-            android:launchMode="singleTop">
-        </activity>
-
+            android:launchMode="singleTop"
+            android:parentActivityName=".view.activities.MainActivity"/>
         <activity
             android:name=".view.activities.FoodInfoActivity"
             android:label="@string/title_activity_food"
@@ -42,6 +37,9 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".view.activities.MainActivity" />
         </activity>
+        <activity android:name=".view.activities.EditMeActivity"
+            android:label="EditMeActivity"
+            android:parentActivityName=".view.activities.MainActivity" />
 
         <meta-data
             android:name="preloaded_fonts"
