--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,7 +61,7 @@ dependencies {
     annotationProcessor "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
 
     // ROOM
-    def room_version = "2.1.0-rc01"
+    def room_version = "2.1.0"
     implementation "androidx.room:room-runtime:$room_version"
     annotationProcessor "androidx.room:room-compiler:$room_version"
 
@@ -70,9 +70,7 @@ dependencies {
 
     // Testing support
     androidTestImplementation "android.arch.core:core-testing:1.1.1"
-    // Card view
-    implementation 'com.android.support:cardview-v7:28.0.0'
-    implementation 'androidx.annotation:annotation:1.0.2'
+    implementation 'androidx.annotation:annotation:1.1.0'
     implementation 'androidx.lifecycle:lifecycle-livedata:2.0.0'
 
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
