--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,6 +68,8 @@ dependencies {
     // RxJava support for Room
     implementation "android.arch.persistence.room:rxjava2:1.1.1"
 
+    implementation "de.siegmar:fastcsv:1.0.3"
+
     // Testing support
     androidTestImplementation "android.arch.core:core-testing:1.1.1"
     implementation 'androidx.annotation:annotation:1.1.0'
