--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
     tools:ignore="GoogleAppIndexingWarning"
     android:fullBackupContent="false">
     <activity
-      android:name=".view.MainActivity"
+      android:name=".MainActivity"
       android:label="@string/app_name"
       android:windowSoftInputMode="adjustResize">
       <intent-filter>
